# students-performance

./: .gitignore  app.py  main.py  pyproject.toml
notebooks/: exploratory_data_analysis.ipynb  model_trainer.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: profiling_report.html
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipelines/: prediction_pipeline.py
