[project]
name = "students-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "dill>=0.4.0",
    "flask>=3.1.1",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "lux-api>=0.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
    "ydata-profiling>=4.12.2",
]
